{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 71,
  "lineage": "e70c8077-3104-6e45-7586-245f9edcf900",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prj-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:internet-gateway/igw-0d7fd4a44b8bd4296",
            "id": "igw-0d7fd4a44b8bd4296",
            "owner_id": "704630444454",
            "region": "us-east-1",
            "tags": {
              "Name": "Satyam-Pipeline-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Satyam-Pipeline-Internet-Gateway"
            },
            "vpc_id": "vpc-039123de071721177"
          },
          "dependencies": [
            "aws_vpc.Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prj-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:route-table/rtb-0270e9234415c36e4",
            "id": "rtb-0270e9234415c36e4",
            "owner_id": "704630444454",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7fd4a44b8bd4296",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Satyam-Pipeline-Route-table"
            },
            "tags_all": {
              "Name": "Satyam-Pipeline-Route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-039123de071721177"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prj-internet-gateway",
            "aws_vpc.Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prj-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06308b5c1fc322a92",
            "region": "us-east-1",
            "route_table_id": "rtb-0270e9234415c36e4",
            "subnet_id": "subnet-03a7bcbd77e6f45c7"
          },
          "dependencies": [
            "aws_internet_gateway.prj-internet-gateway",
            "aws_route_table.prj-route_table",
            "aws_subnet.prj-public_subnet",
            "aws_vpc.Terraform_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prj-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:security-group/sg-0f8141282d8c63d4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request for everything",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8141282d8c63d4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound allow port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inbound allow port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound allow port",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "704630444454",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Satyam-Pipeline-Security-Group"
            },
            "tags_all": {
              "Name": "Satyam-Pipeline-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-039123de071721177"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prj-public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:subnet/subnet-03a7bcbd77e6f45c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a7bcbd77e6f45c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704630444454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Satyam-Pipeline-Subnet"
            },
            "tags_all": {
              "Name": "Satyam-Pipeline-Subnet"
            },
            "vpc_id": "vpc-039123de071721177"
          },
          "dependencies": [
            "aws_vpc.Terraform_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:vpc/vpc-039123de071721177",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0dcb90bfecd9884eb",
            "default_route_table_id": "rtb-0bb2533163c60481b",
            "default_security_group_id": "sg-095c18f0df17ec2e3",
            "dhcp_options_id": "dopt-0de2da361db0fe5fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039123de071721177",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb2533163c60481b",
            "owner_id": "704630444454",
            "region": "us-east-1",
            "tags": {
              "Name": "Satyam-Pipeline-VPC"
            },
            "tags_all": {
              "Name": "Satyam-Pipeline-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704630444454:security-group/sg-004d8af1c7fed5ec4",
            "description": "Allow NFS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004d8af1c7fed5ec4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "704630444454",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg"
            },
            "tags_all": {
              "Name": "efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-039123de071721177"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_VPC"
          ]
        }
      ]
    }
  ]
}